feat: Prepare NetSecureX v1.0.0 for Homebrew release
- Add Homebrew formula with complete dependency management
- Implement secure API key management system with setup wizard
- Add professional documentation (README, CHANGELOG, CONTRIBUTING, SECURITY)
- Create automated GitHub Actions release workflow
- Support multiple installation methods (Homebrew, PyPI, direct)
- Integrate 6 threat intelligence APIs with free tiers
- Add configuration management with graceful degradation
- Ready for professional distribution and open source release

--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,13 @@ output/
 *.html
 *.csv
 *.json
-*.md
+# Ignore generated markdown files but keep documentation
 !README.md
+!CHANGELOG.md
+!CONTRIBUTING.md
+!SECURITY.md
+!DEPLOYMENT.md
+!homebrew-setup.md
 
 # Security sensitive files
 *.key
