--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ asyncio-mqtt>=0.13.0
 aiohttp>=3.12.0
 aiofiles>=23.0.0
 
+# Configuration management
+PyYAML>=6.0.0
+
 # Network and security
 scapy>=2.5.0
 cryptography>=41.0.0
@@ -46,5 +49,4 @@ pyobjc-framework-Cocoa>=8.0; platform_system == "Darwin"
 python-prctl>=1.7.0; platform_system == "Linux"
 
 # Optional: For advanced features
-nmap>=0.0.1
 python-nmap>=0.7.1
