--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,9 @@ tabulate>=0.9.0
 python-dateutil>=2.8.0
 python-dotenv>=1.0.0
 
+# GUI framework
+PySide6>=6.5.0
+
 # Development and testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
