Fix Windows test command: Use cross-platform pytest pattern
Windows PowerShell doesn't expand test_*.py glob patterns like Unix shells.
Changed to 'pytest . -k test_' which works across all platforms.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -54,7 +54,7 @@ jobs:
     
     - name: Run tests
       run: |
-        pytest test_*.py --cov=core --cov=utils --cov=ui
+        pytest . -k "test_" --cov=core --cov=utils --cov=ui
     
     - name: Test CLI commands
       run: |
