--- a/pytest.ini
+++ b/pytest.ini
@@ -1,49 +1,10 @@
 [tool:pytest]
-# Pytest configuration for NetSecureX
+# Simple pytest configuration for NetSecureX CI
 
-# Test discovery
 testpaths = tests
 python_files = test_*.py
-python_classes = Test*
 python_functions = test_*
 
-# Output options
-addopts = 
-    -v
-    --tb=short
-    --strict-markers
-    --disable-warnings
-    --color=yes
-    -p no:cacheprovider
+addopts = -v --tb=short
 
-# Markers
-markers =
-    slow: marks tests as slow (deselect with -m "not slow")
-    network: marks tests as requiring network access
-    gui: marks tests as requiring GUI
-    integration: marks tests as integration tests
-    unit: marks tests as unit tests
-
-# Async support
-asyncio_mode = auto
-
-# Coverage (if pytest-cov is installed)
-# addopts = --cov=core --cov=utils --cov=gui --cov-report=term-missing
-
-# Minimum Python version
 minversion = 3.9
-
-# Test timeout (if pytest-timeout is installed)
-# timeout = 300
-
-# Ignore patterns
-norecursedirs = 
-    .git
-    .tox
-    dist
-    build
-    *.egg
-    venv
-    __pycache__
-    .pytest_cache
-    homebrew-netsecurex
