--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -53,34 +53,7 @@ jobs:
         pip install pytest pytest-cov pytest-asyncio
     
     - name: Run tests
-      run: |
-        echo "Starting NetSecureX CI tests..."
-        python -c "
-import sys
-import os
-sys.path.insert(0, os.getcwd())
-
-print('Testing NetSecureX core imports...')
-try:
-    from core.scanner import PortScanner
-    print('✅ PortScanner imported')
-
-    from core.advanced_scanner import AdvancedPortScanner
-    print('✅ AdvancedPortScanner imported')
-
-    from core.service_detector import ServiceDetector
-    print('✅ ServiceDetector imported')
-
-    from utils.logger import SecurityLogger
-    print('✅ SecurityLogger imported')
-
-    print('🎉 All core modules imported successfully!')
-    print('✅ CI test passed')
-
-except Exception as e:
-    print(f'❌ CI test failed: {e}')
-    sys.exit(1)
-        "
+      run: python tests/test_unit.py
     
     - name: Test CLI commands
       run: |
