--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -53,7 +53,22 @@ jobs:
         pip install pytest pytest-cov pytest-asyncio
     
     - name: Run tests
-      run: python tests/test_unit.py
+      shell: bash
+      run: |
+        if [[ "$RUNNER_OS" == "Windows" ]]; then
+          echo "🪟 Running Windows-specific tests..."
+          python tests/windows_test_runner.py
+          if [ $? -eq 0 ]; then
+            echo "✅ Windows-specific tests passed, running main tests..."
+            python tests/test_unit.py
+          else
+            echo "❌ Windows-specific tests failed, but continuing with main tests..."
+            python tests/test_unit.py
+          fi
+        else
+          echo "🐧🍎 Running standard tests for Linux/macOS..."
+          python tests/test_unit.py
+        fi
     
     - name: Test CLI commands
       run: |
